fix: styles for work-text-clipper and opacity 0 for initial state

--- a/src/styles/landingpage.scss
+++ b/src/styles/landingpage.scss
@@ -73,6 +73,14 @@ body {
 		align-items: center;
 
 	}
+	.intro-welcome{
+				z-index: 7;
+		color: var(--white);
+		font-size: 3vw;
+		letter-spacing: 0px;
+		display: flex;
+		align-items: center;
+	}
 
 	span {
 		color: var(--white);
@@ -122,7 +130,14 @@ body {
 	width: 100vw;
 	height: auto;
 
+	.works-header,.works-paragraph,.works-indicator{
+		opacity: 0;
+	}
 
+	.work-text-clipper{
+		overflow: clip;
+		// background-color: blue;
+	}
 	.works-text-container {
 		height: 18em;
 		display: flex;
